updated code for ui

--- a/home.html
+++ b/home.html
@@ -13,56 +13,56 @@
 </head>
 
 <body>
-    <section class="login-block" style="height:100vh">
+    <section class="login-block">
         <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-4">
-                    <div class="card mt-2" style="width: 18rem;">
+            <div class="row justify-content-end ">
+                <!-- <div class="col">
+                    <div class="card mt-2" style="width: 8rem;">
                         <img src="./images/logo-1.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <p class="card-text">COMPANY LOGO</p>
-                        </div>
+                    
                       </div>
                 </div>
-                <div class="col-4">
-                    <div class="card mt-2" style="width: 18rem;">
+                <div class="col">
+                    <div class="card mt-2" style="width: 8rem;">
                         <img src="./images/logo-1.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <p class="card-text">CLIENT LOGO</p>
-                        </div>
+                      
                       </div>
-                </div>
-              </div>
-            <div class="row justify-content-around mt-5 pt-5 pb-5">
-                <div class="col-4">
-                    <div class="thumbnail">
-                        <div class="caption">
-                            <h4>Market Trends</h4>
-                            <p>Get the latest Trends</p>
+                </div> -->
+            </div>
+            <div class="row pt-5">
+                <div class="col">
+                    <div class="card" style="width:400px;">
+                        <img class="card-img-top" src="./images/trends-01.jpg" style="height: 250px;" alt="Card image">
+                        <div class="card-body">
 
+                            <p class="card-text">Trends on Social Media</p>
+                            <a href="#" class="btn btn-primary">Trends</a>
                         </div>
-                        <img src="./images/trends.png" alt="...">
                     </div>
                 </div>
-                <div class="col-4">
-                    <div class="thumbnail">
-                        <div class="caption">
-                            <h4>Search Using Keywords</h4>
-                            <p>Expand your limits</p>
+                <div class="col">
+                </div>
+                <div class="col">
+                    <div class="card" style="width:400px; ">
+                        <img class="card-img-top" src="./images/search-01.jpg" style="height: 250px;" alt="Card image">
+                        <div class="card-body">
 
+                            <p class="card-text">Trending Search</p>
+                            <a href="#" class="btn btn-primary">Trending Search</a>
                         </div>
-                        <img src="./images/keyword-research.jpg" alt="..." style="width:312px;height:161px;">
                     </div>
                 </div>
-              </div>
+            </div>
 
         </div>
+  
+
     </section>
-    <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+    <footer id="footer" class="footer py-4 bg-dark text-white-50" >
         <div class="text-center">
-          <small>Copyright &copy; Data Crawler</small>
+            <small>Copyright &copy; Data Crawler</small>
         </div>
-      </footer>
+    </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
