--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/login.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -41,7 +42,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="./images/img_05.jpg" alt="Third slide"
+                                <img class="d-block w-100" src="./images/img_03.jpg" alt="Third slide"
                                     style="height:85vh">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Image Three </h5>
@@ -81,22 +82,18 @@
                                 <input type="checkbox" class="form-check-input">
                                 <small>Remember Me</small>
                             </label>
-
+                            
                         </div>
-
+                        <br>
                         <div class="form-group mt-1">
-                            <button type="submit" onclick="forward()" class="btn btn-login">Submit</button>
+                            <button type="submit" onclick="forward()" class="btn btn-login  btn-block">Submit</button>
                         </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-login">Login With Google</button>
+                   
+                       <div class="row">
+                        <a href="#" class="fa fa-facebook col-sm"></a>
+                        <a href="#" class="fa fa-twitter col-sm"></a>
+                        <a href="#" class="fa fa-google col-sm"></a>
                         </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-login">Login With Facebook</button>
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-login">Login With Twitter</button>
-                        </div>
-
                     </form>
 
 
