--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
                         <div class="card-body">
 
                             <p class="card-text">Trending Search</p>
-                            <a href="#" class="btn btn-primary">Trending Search</a>
+                            <a href="trendsSearch.html" class="btn btn-primary">Trending Search</a>
                         </div>
                     </div>
                 </div>
